--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -200,6 +200,9 @@ jobs:
         with:
           name: UNWDS
           path: ${{ github.workspace }}/UNWDS.phar
+          path: |
+            ${{ github.workspace }}/UNWDS.phar
+            ${{ github.workspace }}/bin/
 
   integration:
     name: Integration tests
