--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -31,6 +31,8 @@ parameters:
 		- tests/plugins/TesterPlugin
 	dynamicConstantNames:
 		- pocketmine\IS_DEVELOPMENT_BUILD
+		- pocketmine\IS_UNW_API_NULL
+		- pocketmine\UNW_API_DEBUG_ENABLED
 		- pocketmine\DEBUG
 	stubFiles:
 		- tests/phpstan/stubs/pthreads.stub
