--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         image: [ubuntu-20.04]
-        php: [7.4.20]
+        php: [7.4.20, 8.0.7]
 
     steps:
       - uses: actions/checkout@v2 #needed for build.sh
@@ -35,8 +35,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        image: [ubuntu-20.04]
-        php: [7.4.20]
+        include:
+          - php: 8.0.7
+            config: phpstan.php8.neon
+            image: ubuntu-20.04
+          - php: 7.4.20
+            config: phpstan.neon.dist
+            image: ubuntu-20.04
 
     steps:
       - uses: actions/checkout@v2
@@ -76,7 +81,7 @@ jobs:
         run: php composer.phar install --prefer-dist --no-interaction
 
       - name: Run PHPStan
-        run: ./vendor/bin/phpstan analyze --no-progress --memory-limit=2G
+        run: ./vendor/bin/phpstan analyze --no-progress --memory-limit=2G -c ${{ matrix.config }}
 
   phpunit:
     name: PHPUnit tests
@@ -86,7 +91,7 @@ jobs:
       fail-fast: false
       matrix:
         image: [ubuntu-20.04]
-        php: [7.4.20]
+        php: [7.4.20, 8.0.7]
 
     steps:
       - uses: actions/checkout@v2
@@ -136,7 +141,7 @@ jobs:
       fail-fast: false
       matrix:
         image: [ubuntu-20.04]
-        php: [7.4.20]
+        php: [7.4.20, 8.0.7]
 
     steps:
       - uses: actions/checkout@v2
@@ -188,7 +193,7 @@ jobs:
       fail-fast: false
       matrix:
         image: [ubuntu-20.04]
-        php: [7.4.20]
+        php: [8.0.7]
 
     steps:
       - uses: actions/checkout@v2
@@ -261,7 +266,7 @@ jobs:
       fail-fast: false
       matrix:
         image: [ubuntu-20.04]
-        php: [7.4.20]
+        php: [7.4.20, 8.0.7]
 
     steps:
       - uses: actions/checkout@v2
@@ -346,7 +351,7 @@ jobs:
       - name: Setup PHP and tools
         uses: shivammathur/setup-php@2.9.0
         with:
-          php-version: 7.4
+          php-version: 8.0
           tools: php-cs-fixer
 
       - name: Run PHP-CS-Fixer
