--- a/.github/workflows/build-api.yml
+++ b/.github/workflows/build-api.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         image: [ubuntu-20.04]
-        php: [8.0.7]
+        php: [8.0.8]
 
     steps:
       - uses: actions/checkout@v2 #needed for build.sh
@@ -26,15 +26,15 @@ jobs:
         if: steps.php-build-cache.outputs.cache-hit != 'true'
         run: chmod +x ./tests/gh-actions/build.sh && ./tests/gh-actions/build.sh "${{ matrix.php }}"
 
-  artifacts:
-    name: Preprocessor tests
+  build-api:
+    name: Build API
     needs: build-php
     runs-on: ubuntu-20.04
     strategy:
       fail-fast: false
       matrix:
         image: [ubuntu-20.04]
-        php: [8.0.7]
+        php: [8.0.8]
 
     steps:
       - uses: actions/checkout@v2
@@ -54,7 +54,7 @@ jobs:
 
       - name: Install cached PHP's dependencies
         if: steps.php-build-cache.outputs.cache-hit == 'true'
-        run: ./tests/gh-actions/install-dependencies.sh
+        run: chmod +x ./tests/gh-actions/install-dependencies.sh && ./tests/gh-actions/install-dependencies.sh
 
       - name: Prefix PHP to PATH
         run: echo "$(pwd)/bin/php7/bin" >> $GITHUB_PATH
