forgot to rename the script file..

--- a/.github/workflows/build-api.yml
+++ b/.github/workflows/build-api.yml
@@ -77,7 +77,7 @@ jobs:
       - name: Run API bump script
         env: 
           GHTOKEN: ${{ secrets.GHTOKEN }}
-        run: chmod +x ./build/api-bump.sh && ./build/api-bump.sh
+        run: chmod +x ./build/build-api.sh && ./build/build-api.sh
         
      
 
