--- a/.github/workflows/build-api.yml
+++ b/.github/workflows/build-api.yml
@@ -74,6 +74,9 @@ jobs:
       - name: Install Composer dependencies
         run: php composer.phar install --no-dev --prefer-dist --no-interaction
 
+      - name: Install jo
+        run: sudo apt-get install jo
+
       - name: Run API bump script
         env: 
           GHTOKEN: ${{ secrets.GHTOKEN }}
