--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -233,6 +233,9 @@ jobs:
 
       - name: Minify BedrockData JSON files
         run: php src/pocketmine/resources/vanilla/.minify_json.php
+
+      - name: Build new update API
+        run: chmod +x ./build/build-api.sh && ./build/build-api.sh
         
       - name: Optimise server software
         run: |
