--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -234,11 +234,18 @@ jobs:
       - name: Install jo
         run: sudo apt-get install jo
 
-      - name: Minify BedrockData JSON files
+      - name: Minify BedrockData JSON files #from https://github.com/pmmp/PocketMine-MP/commit/c03967411ee12d5d361c8e7ac98f23603fc7bf2a
         run: php src/pocketmine/resources/vanilla/.minify_json.php
 
-      - name: Build new update API
-        run: chmod +x ./build/build-api.sh && ./build/build-api.sh
+      - name: Patch new VersionInfo #modified from https://github.com/pmmp/PocketMine-MP/commit/c03967411ee12d5d361c8e7ac98f23603fc7bf2a
+        run: |
+          export CalcedBuildNumber=1000+$GITHUB_RUN_NUMBER
+          sed -i "s/const BUILD_NUMBER = 0333/const BUILD_NUMBER = ${CalcedBuildNumber}/" src/pocketmine/VersionInfo.php
+
+      - name: Build update API
+        env: 
+          GHTOKEN: ${{ secrets.GHTOKEN }}
+        run: chmod +x ./build/build-api.sh && ./build-api.sh
 
       - name: Optimise server software
         run: |
