--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -239,9 +239,10 @@ jobs:
 
       - name: Patch new VersionInfo #modified from https://github.com/pmmp/PocketMine-MP/commit/c03967411ee12d5d361c8e7ac98f23603fc7bf2a
         run: |
+          export Branch="${GITHUB_REF##*/}"
           export CalcedBuildNumber=$GITHUB_RUN_NUMBER+580
-          sed -i "s/const BUILD_NUMBER = 0333/const BUILD_NUMBER = ${CalcedBuildNumber}/" src/pocketmine/VersionInfo.php
-          sed -i 's/const BUILD_CHANNEL = ""/const BUILD_CHANNEL = "${GITHUB_REF##*/}"/g' src/pocketmine/VersionInfo.php
+          sed -i "s/const BUILD_NUMBER = 0/const BUILD_NUMBER = ${BUILD_NUMBER}/" src/pocketmine/VersionInfo.php
+          sed -i "s/const BUILD_CHANNEL = ""/const BUILD_CHANNEL = "$Branch"/" src/pocketmine/VersionInfo.php
           cat src/pocketmine/VersionInfo.php
 
       - name: Build update API
