--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -240,9 +240,9 @@ jobs:
       - name: Patch new VersionInfo #modified from https://github.com/pmmp/PocketMine-MP/commit/c03967411ee12d5d361c8e7ac98f23603fc7bf2a
         run: |
           export Branch="${GITHUB_REF##*/}"
-          export CalcedBuildNumber=$GITHUB_RUN_NUMBER+580
+          export CalcedBuildNumber=580+$GITHUB_RUN_NUMBER
           sed -i "s/const BUILD_NUMBER = 0/const BUILD_NUMBER = ${BUILD_NUMBER}/" src/pocketmine/VersionInfo.php
-          sed -i "s/const BUILD_CHANNEL = ""/const BUILD_CHANNEL = "$Branch"/" src/pocketmine/VersionInfo.php
+          sed -i "s/const BUILD_CHANNEL = ""/const BUILD_CHANNEL = $Branch/" src/pocketmine/VersionInfo.php
           cat src/pocketmine/VersionInfo.php
 
       - name: Build update API
