--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -242,8 +242,7 @@ jobs:
           export Branch="${GITHUB_REF##*/}"
           export CalcedBuildNumber=580+$GITHUB_RUN_NUMBER
           sed -i "s/const BUILD_NUMBER = 0/const BUILD_NUMBER = ${BUILD_NUMBER}/" src/pocketmine/VersionInfo.php
-          sed -i "s/const BUILD_CHANNEL = ""/const BUILD_CHANNEL = $Branch/" src/pocketmine/VersionInfo.php
-          cat src/pocketmine/VersionInfo.php
+          sed -i "s/const BUILD_CHANNEL = \"\"/const BUILD_CHANNEL = \"${Branch}\"/g" src/pocketmine/VersionInfo.php
 
       - name: Build update API
         env: 
@@ -363,7 +362,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Setup PHP and tools
-        uses: shivammathur/setup-php@2.9.0
+        uses: shivammathur/setup-php@2.12.0
         with:
           php-version: 8.0
           tools: php-cs-fixer
