--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -241,7 +241,7 @@ jobs:
         run: |
           export Branch="${GITHUB_REF##*/}"
           export CalcedBuildNumber=580+$GITHUB_RUN_NUMBER
-          sed -i "s/const BUILD_NUMBER = 0333/const BUILD_NUMBER = ${BUILD_NUMBER}/" src/pocketmine/VersionInfo.php
+          sed -i "s/const BUILD_NUMBER = 0333/const BUILD_NUMBER = ${CalcedBuildNumber}/" src/pocketmine/VersionInfo.php
           sed -i "s/const BUILD_CHANNEL = \"\"/const BUILD_CHANNEL = \"${Branch}\"/g" src/pocketmine/VersionInfo.php
 
       - name: Build update API
