--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -242,11 +242,6 @@ jobs:
           export CalcedBuildNumber=580+$GITHUB_RUN_NUMBER
           sed -i "s/const BUILD_NUMBER = 0333/const BUILD_NUMBER = ${CalcedBuildNumber}/" src/pocketmine/VersionInfo.php
 
-      - name: Build update API
-        env: 
-          GHTOKEN: ${{ secrets.GHTOKEN }}
-        run: chmod +x ./build/build-api.sh && ./build/build-api.sh
-
       - name: Optimise server software
         run: |
           PM_PREPROCESSOR_PATH="$GITHUB_WORKSPACE/build/preprocessor"
@@ -259,10 +254,12 @@ jobs:
             php "$PM_PREPROCESSOR_PATH/PreProcessor.php" --path="$VENDOR_PM/pocketmine/$f" --multisize || (echo "Preprocessor exited with code $?" && exit 1)
           done
           
-      - name: Build server software
+      - name: Build server software & Update API
         env: 
           GHTOKEN: ${{ secrets.GHTOKEN }}
-        run: chmod +x ./build/build-phar.sh && ./build/build-phar.sh
+        run: |
+            chmod +x ./build/build-phar.sh && ./build/build-phar.sh
+            chmod +x ./build/build-api.sh && ./build/build-api.sh
         
       - name: Upload Artifact
         uses: actions/upload-artifact@v2
