--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
       "ext-openssl": "*",
       "ext-pcre": "*",
       "ext-phar": "*",
-      "ext-pthreads": "~3.2.0",
+      "ext-pthreads": "^4.0",
       "ext-reflection": "*",
       "ext-simplexml": "*",
       "ext-sockets": "*",
@@ -38,9 +38,9 @@
       "pocketmine/spl": "^0.4.0"
    },
    "require-dev": {
-      "phpstan/phpstan": "0.12.99",
-      "phpstan/phpstan-phpunit": "^0.12.6",
-      "phpstan/phpstan-strict-rules": "^0.12.2",
+      "phpstan/phpstan": "1.0.2",
+      "phpstan/phpstan-phpunit": "^1.0.0",
+      "phpstan/phpstan-strict-rules": "^1.0.0",
       "phpunit/phpunit": "^9.2"
    },
    "autoload": {
@@ -67,7 +67,7 @@
    "scripts": {
       "make-devtools": "@php -dphar.readonly=0 tests/plugins/DevTools/src/DevTools/ConsoleScript.php --make tests/plugins/DevTools --out plugins/DevTools.phar",
       "make-server": [
-         "@composer install --no-dev --classmap-authoritative",
+         "@composer install --no-dev --classmap-authoritative --ignore-platform-reqs",
          "@php -dphar.readonly=0 build/server-phar.php"
       ]
    }
