--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -1,9 +1,6 @@
 includes:
 	- tests/phpstan/configs/actual-problems.neon
-	- tests/phpstan/configs/check-explicit-mixed-baseline.neon
 	- tests/phpstan/configs/gc-hacks.neon
-	- tests/phpstan/configs/l7-baseline.neon
-	- tests/phpstan/configs/l8-baseline.neon
 	- tests/phpstan/configs/php-bugs.neon
 	- tests/phpstan/configs/phpstan-bugs.neon
 	- tests/phpstan/configs/phpunit-wiring-tests.neon
@@ -15,9 +12,9 @@ includes:
 	- vendor/phpstan/phpstan-strict-rules/rules.neon
 
 parameters:
-	level: 8
-	checkExplicitMixed: true
+	level: 9
 	checkMissingCallableSignature: true
+	treatPhpDocTypesAsCertain: false
 	bootstrapFiles:
 		- tests/phpstan/bootstrap.php
 	scanDirectories:
@@ -34,6 +31,9 @@ parameters:
 		analyseAndScan:
 			- build/php
 			- build/preprocessor
+		analyse:
+			- src/pocketmine/block/StoneSlab.php #overrides STONE constant
+			- src/pocketmine/item/Potion.php #overrides WATER constant
 	dynamicConstantNames:
 		- pocketmine\DEBUG
 		- pocketmine\IS_DEVELOPMENT_BUILD
