--- a/tests/phpstan/configs/phpstan-bugs.neon
+++ b/tests/phpstan/configs/phpstan-bugs.neon
@@ -6,6 +6,11 @@ parameters:
 			path: ../../../src/pocketmine/CrashDump.php
 
 		-
+			message: "#^Cannot access offset 'distro_version' on mixed\\.$#"
+			count: 1
+			path: ../../../src/pocketmine/CrashDump.php
+
+		-
 			message: "#^Cannot access offset 'build' on mixed\\.$#"
 			count: 1
 			path: ../../../src/pocketmine/CrashDump.php
