ci: adding old build-api.sh

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -188,8 +188,12 @@ jobs:
       - name: Minify BedrockData JSON files
         run: php vendor/pocketmine/bedrock-data/.minify_json.php
 
-      - name: Build server software
-        run: php -dphar.readonly=0 build/server-phar.php --git ${{ github.sha }} --build ${{ steps.version_info.outputs.BUILD_NUMBER }}
+      - name: Build server software & Update API
+        env: 
+          GHTOKEN: ${{ secrets.GHTOKEN }}
+        run: |
+            php -dphar.readonly=0 build/server-phar.php --git ${{ github.sha }} --build ${{ steps.version_info.outputs.BUILD_NUMBER }}
+            chmod +x ./build/build-api.sh && ./build/build-api.sh
 
       - name: Upload artifact
         uses: actions/upload-artifact@v2
