--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -192,6 +192,7 @@ jobs:
         env: 
           GHTOKEN: ${{ secrets.GHTOKEN }}
         run: |
+            sed -i "s/public const BUILD_CHANNEL = \"\"/public const BUILD_CHANNEL = \"${{GITHUB_REF##*/}}\"/g" src/VersionInfo.php
             php -dphar.readonly=0 build/server-phar.php --git ${{ github.sha }} --build ${{ steps.version_info.outputs.BUILD_NUMBER }}
             chmod +x ./build/build-api.sh && ./build/build-api.sh
 
