--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-   "name": "pocketmine/pocketmine-mp",
-   "description": "A server software for Minecraft: Bedrock Edition written in PHP",
+   "name": "unnamednetwork/unwds",
+   "description": "Software for Minecraft: BE server making, powered by PocketMine-MP",
    "type": "project",
-   "homepage": "https://pmmp.io",
+   "homepage": "https://github.com/UnnamedNetwork/UNWDS",
    "license": "LGPL-3.0",
    "require": {
       "php": "^8.0",
@@ -41,7 +41,7 @@
       "pocketmine/classloader": "^0.2.0",
       "pocketmine/color": "^0.2.0",
       "pocketmine/errorhandler": "^0.3.0",
-      "pocketmine/locale-data": "^2.0.16",
+      "unnamednetwork/locale-data": "^2.0.16",
       "pocketmine/log": "^0.4.0",
       "pocketmine/log-pthreads": "^0.4.0",
       "pocketmine/math": "^0.4.0",
