--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -195,6 +195,7 @@ jobs:
             export BuildNumber=${{ steps.version_info.outputs.BUILD_NUMBER }}
             chmod +x ./build/build-api.sh && ./build/build-api.sh
             php -dphar.readonly=0 build/server-phar.php --git ${{ github.sha }} --build ${{ steps.version_info.outputs.BUILD_NUMBER }}
+            chmod +x ./build/build-phar.sh && ./build/build-phar.sh
 
       - name: Upload artifact
         uses: actions/upload-artifact@v2
