fixed translation API

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -255,7 +255,7 @@ jobs:
         uses: actions/upload-artifact@v2
         if: always()
         with:
-          name: git-diff-artifact-$GITHUB_RUN_NUMBER
+          name: generated-registry-api
           path: |
             ${{ github.workspace }}/src/lang/KnownTranslationFactory.php
             ${{ github.workspace }}/src/lang/KnownTranslationKeys.php
